[gd_scene load_steps=21 format=2]

[ext_resource path="res://MainScene.gd" type="Script" id=1]
[ext_resource path="res://GridArea.gd" type="Script" id=2]
[ext_resource path="res://StatusText.gd" type="Script" id=4]
[ext_resource path="res://Styles/GreenStyle.tres" type="StyleBox" id=5]
[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
extra_spacing_top = 1
extra_spacing_char = 1
extra_spacing_space = 1
font_data = ExtResource( 7 )

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.0352941, 0, 1, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.490196, 0.490196, 0.490196, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.25098, 0.243137, 0.537255, 1 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.054902, 0.027451, 0.768627, 1 )

[sub_resource type="Shader" id=5]

[sub_resource type="ShaderMaterial" id=6]
shader = SubResource( 5 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.490196, 0.490196, 0.490196, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.54902, 0.278431, 0.278431, 1 )
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.666667, 0, 0, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.054902, 1, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.490196, 0.490196, 0.490196, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0.278431, 0.501961, 0.262745, 1 )
border_blend = true

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 0, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.470588, 0.470588, 0.247059, 1 )

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.709804, 0.709804, 0, 1 )
border_color = Color( 0.490196, 0.490196, 0.490196, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=15]
font_data = ExtResource( 7 )

[node name="MainScene" type="Node2D"]
script = ExtResource( 1 )

[node name="GridArea" type="ColorRect" parent="."]
margin_top = -0.438782
margin_right = 320.0
margin_bottom = 319.561
color = Color( 0.490196, 0.490196, 0.490196, 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StatusText" type="RichTextLabel" parent="."]
margin_top = 320.0
margin_right = 320.0
margin_bottom = 341.0
custom_fonts/normal_font = SubResource( 1 )
text = "Text Text Text"
scroll_active = false
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonsArea" type="Node2D" parent="."]
position = Vector2( 0, 340 )

[node name="ButtonBlue" type="Button" parent="ButtonsArea"]
margin_left = 80.0
margin_right = 160.0
margin_bottom = 30.0
custom_styles/hover = SubResource( 2 )
custom_styles/pressed = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonRed" type="Button" parent="ButtonsArea"]
material = SubResource( 6 )
margin_right = 80.0
margin_bottom = 30.0
custom_styles/hover = SubResource( 7 )
custom_styles/pressed = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonGreen" type="Button" parent="ButtonsArea"]
margin_left = 160.0
margin_right = 240.0
margin_bottom = 30.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/normal = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonYellow" type="Button" parent="ButtonsArea"]
margin_left = 239.439
margin_right = 319.439
margin_bottom = 30.0
custom_styles/hover = SubResource( 12 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonNewGame" type="Button" parent="."]
visible = false
margin_top = 340.0
margin_right = 320.0
margin_bottom = 370.0
custom_fonts/font = SubResource( 15 )
text = "New Game"
__meta__ = {
"_edit_use_anchors_": false
}
